syntax = "proto3";

package gRPC;

option go_package = "main/gRPC";

service UserService {
  rpc GetUser (UserRequest) returns (UserResponse);
}

message UserRequest {
  string user_id = 1;
}

message UserResponse {
  string id = 1;
  string email = 2;
}